frontend/src/App.css
:root {
  --warning-color: rgb(255, 200, 0);
  --warning-color-light: rgb(250, 242, 212);
  --error-color: rgb(255, 0, 0);
  --error-color-light: rgb(255, 236, 236);
  --info-color: rgb(0, 119, 255);
  --info-color-light: rgb(236, 245, 255);

  text-align: center;
}

/* --- Text --- */
.time-string {
  font-weight: bold;
  color: black;
}

.error-string {
  font-weight: bold;
  color: rgb(184, 0, 0);
}

/* --- Map --- */
.marker-dot {
  border-radius: 50%;
  width: 20px;
  height: 20px;
  border: 3px solid white;
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: violet;
}
.marker-dot .blue {
  background-color: #3388ff; 
}
.marker-dot .gray {
  background-color: gray; 
}

/* --- Overlays --- */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
}

.overlay.gray {
  background-color: rgba(169, 169, 169, 0.548);
}
.overlay.disclaimer {
  background-color: rgb(169, 169, 169);
  z-index: 9000;
}
.overlay.blur {
  backdrop-filter: blur(3px);
  cursor: pointer;
}

.grayscale {
  filter: grayscale(100%);
  transition: filter 0.5s ease;
}

/* --- Headers --- */
h3 {
  font-weight: normal;
}
h4 {
  font-weight: normal;
}

/* --- Boxes --- */
.box {
  background-color: white;
  box-shadow: 5px 10px 8px rgba(0, 0, 0, 0.288);
  opacity: 1;

  max-height: 80vh;
  overflow: hidden;

  border-radius: 10px;
  border-style: solid;
  border-width: 2px;
  border-color: rgba(0, 0, 0, 0.699);
}

.scrollable {
  overflow: scroll;
}

.box.popup {
  /* Position the box above the map */
  position: absolute;
  z-index: 1001;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  
  max-width: 80%;
  min-width: 300px;
}

/* Navigation bar */
.box.nav {
  /* Above map but below popup */
  position: absolute;
  z-index: 999;

  display: flex;
  flex-direction: row;
  justify-content: space-evenly;

  height: 65px;
  margin-inline: auto;
  max-width: 300px;
  transform: translateY(-5px);

  --distance: 15px;
  bottom: var(--distance);
  left: var(--distance);
  right: var(--distance);
}
.box.nav button {
  /* Narrower button */
  padding: 3px 5px;
  font-size: 36px;
  border-radius: 15px;
  align-self: center;
}

.nav-button-error-descriptor {
  font-size: 20px;
}

/* Landscape styling */
@media (orientation: landscape) {
  .box.nav {
    transform: translateX(0) translateY(0);
  }
}

/* Other box types */
.box.info {
  background-color: var(--info-color-light);
  border-color: var(--info-color);
  z-index: 9999;
}

.box.error {
  background-color: var(--error-color-light);
  border-color: var(--error-color);
}

.box.warning {
  background-color: var(--warning-color-light);
  border-color: var(--warning-color);
}

/* --- Flight operating hours text --- */
.flight-ops-status-text {
  font-weight: bold;
}
.flight-ops-status-text.within {
  color: orange;
}
.flight-ops-status-text.outside {
  color: darkgreen;
}

/* --- Spinner --- */
.clock-spinner {
  display: inline-block;
  animation: clock-change 1s steps(12) infinite;
}

.clock-spinner::after {
  content: "🕒";
  animation: clock-change 1s steps(12) infinite;
}

@keyframes clock-change {
  0% { content: "🕒"; }
  8.33% { content: "🕓"; }
  16.66% { content: "🕔"; }
  25% { content: "🕕"; }
  33.33% { content: "🕖"; }
  41.66% { content: "🕗"; }
  50% { content: "🕘"; }
  58.33% { content: "🕙"; }
  66.66% { content: "🕚"; }
  75% { content: "🕛"; }
  83.33% { content: "🕐"; }
  91.66% { content: "🕑"; }
  100% { content: "🕒"; }
}

/* --- Button --- */
button {
  background-color: rgba(0, 0, 0, 0.1);
  color: rgb(58, 58, 58);
  border: none;
  padding: 1% 25%;
  border-radius: 10px;
  font-size: 30px;
  cursor: pointer;
  transition: background-color 0.1s ease /*, transform 0.05s ease*/;
}

button:hover {
  background-color: rgba(56, 159, 255, 0.2);
}

button:active {
  background-color: rgba(56, 159, 255, 0.377);
  transform: scale(0.9);
}

button:focus {
  outline: none;
}

/* Disabled */
button:disabled {
  filter: grayscale(100%);
  background-color: unset;
  cursor: not-allowed;
}
button:disabled:hover,
button:disabled:active {
  background-color: unset;
  transition: unset;
  transform: unset;
}

/* Close button */
button.close {
  /* Overrides */
  padding: 1px 5px;
  font-size: 18px;

  position: absolute;
  top: 10px;
  right: 10px;
  background: none;
  background-color: rgba(255, 56, 56, 0.103);
  border: none;
}
button.close:hover {
  background-color: rgba(255, 56, 56, 0.24);
}
button.close:active {
  background-color: rgba(255, 56, 56, 0.548);  
}

